[gd_scene load_steps=12 format=2]

[ext_resource path="res://clickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://correct.wav" type="AudioStream" id=2]
[ext_resource path="res://Pergunta.gd" type="Script" id=3]
[ext_resource path="res://audioWrong.gd" type="Script" id=4]
[ext_resource path="res://wrong_5.wav" type="AudioStream" id=5]
[ext_resource path="res://audioCorrect.gd" type="Script" id=6]
[ext_resource path="res://bulb_red.png" type="Texture" id=7]
[ext_resource path="res://back.png" type="Texture" id=8]
[ext_resource path="res://skip.png" type="Texture" id=9]
[ext_resource path="res://bulb_green.png" type="Texture" id=10]
[ext_resource path="res://bulb_off.png" type="Texture" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="voltar" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 12 )
scale = Vector2( 1.5, 0.375 )
texture = ExtResource( 8 )

[node name="pular" parent="." instance=ExtResource( 1 )]
position = Vector2( 928, 288 )
texture = ExtResource( 9 )

[node name="Respostas" type="Node2D" parent="."]

[node name="Reposta" parent="Respostas" instance=ExtResource( 1 )]
position = Vector2( 288, 416 )

[node name="Reposta2" parent="Respostas" instance=ExtResource( 1 )]
position = Vector2( 416, 416 )

[node name="Reposta3" parent="Respostas" instance=ExtResource( 1 )]
position = Vector2( 544, 416 )

[node name="Reposta4" parent="Respostas" instance=ExtResource( 1 )]
position = Vector2( 672, 416 )

[node name="Audio" type="Node" parent="."]

[node name="Wrong" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Correct" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Labels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pergunta" type="Label" parent="Labels"]
margin_left = 56.0
margin_top = 8.0
margin_right = 1064.0
margin_bottom = 264.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Erros_restantes" type="Label" parent="Labels"]
margin_top = 560.0
margin_right = 240.0
margin_bottom = 598.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pergunta_atual" type="Label" parent="Labels"]
margin_left = 704.0
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 600.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicador" type="Node2D" parent="."]

[node name="Errado" type="Sprite" parent="Indicador"]
visible = false
modulate = Color( 1, 0.996078, 0.996078, 1 )
position = Vector2( 160, 288 )
texture = ExtResource( 7 )

[node name="Correto" type="Sprite" parent="Indicador"]
visible = false
position = Vector2( 160, 288 )
texture = ExtResource( 10 )

[node name="bulb_off" type="Sprite" parent="Indicador"]
position = Vector2( 160, 288 )
texture = ExtResource( 11 )
[connection signal="audioPlay" from="." to="Audio/Wrong" method="_on_Node2D_audioPlay"]
[connection signal="audioPlay" from="." to="Audio/Correct" method="_on_Node2D_audioPlay"]
[connection signal="clicked" from="voltar" to="." method="_on_voltar_clicked"]
[connection signal="clicked" from="pular" to="." method="_on_pular_clicked"]
[connection signal="clicked" from="Respostas/Reposta" to="." method="_on_icon_clicked"]
[connection signal="clicked" from="Respostas/Reposta2" to="." method="_on_icon_clicked"]
[connection signal="clicked" from="Respostas/Reposta3" to="." method="_on_icon_clicked"]
[connection signal="clicked" from="Respostas/Reposta4" to="." method="_on_icon_clicked"]
[connection signal="finished" from="Audio/Wrong" to="." method="_on_Audio_finished"]
[connection signal="finished" from="Audio/Correct" to="." method="_on_Audio_finished"]
